syntax = "proto3";

package Reaction;

enum ReactionType {
  REACTION_LIKE = 0;
  REACTION_UNLIKE = 1;
  REACTION_DISLIKE = 2;
  REACTION_UNDISLIKE = 3;
}


message VideoReactionDto {
  string userId = 1;
  string videoId = 2;
  ReactionType reaction = 3;
}

message ReactedOnVideoDto {
  string videoId = 1;
  string userId = 2;
}

message ReactionLikeCountVideoDto {
  string videoId = 1;
}

message ReactionDislikeCountVideoDto {
  string videoId = 1;
}

message ReactionResponse {
  string response = 1;
}

message ReactionFoundForVideoResponse {
  string id = 1;
  string userId = 2;
  string videoId = 3;
  ReactionType reaction = 4;
}

message Empty {}

message ReactionHealthCheckRequest {
  string service = 1;
}

message ReactionLikeCountVideoResponse {
  int64 likes = 1;
}

message ReactionDislikeCountVideoResponse {
  int64 dislikes = 1;
}


message ReactionHealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}

service ReactionService {
  rpc reactToVideo(VideoReactionDto) returns (ReactionResponse) {}
  rpc getLikesCountForVideo(ReactionLikeCountVideoDto) returns (ReactionLikeCountVideoResponse) {}
  rpc getDislikesCountForVideo(ReactionDislikeCountVideoDto) returns (ReactionDislikeCountVideoResponse) {}
  rpc findReactionOfUserOnVideo(ReactedOnVideoDto) returns (ReactionFoundForVideoResponse) {}
  rpc Check(ReactionHealthCheckRequest) returns (ReactionHealthCheckResponse) {}
}